# flake_generator

./: .gitignore  Cargo.toml  FzfLib.hs  LICENSE  Main.hs  README.md  flake.nix  nix-expr-generator.cabal
.github/workflows/: nix.yml
src/: main.rs  parser.rs  user.rs
src/ir/: hlir_types.rs  mod.rs
src/parser/: body.rs  file.rs  input_utils.rs  input_utils_tests.rs  mod.rs  parser_utils.rs  parser_utils_tests.rs  url.rs  utils.rs  utils_tests.rs
src/user/: mod.rs  rust.rs
test_data/: multi_arg.nix  one_arg_ellipsis.nix  one_arg_no_ellipsis.nix  zero_args.nix
tests/: inputs.nix  multi_arg.nix  no_args.nix  one_arg.nix
