[package]
name = "flake_generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_str = "0.1.19"
skim = "0.9.4"
rnix = "0.9.0"
rowan = "0.12.6"
parse-display = "0.4.1"
anyhow = "1.0"
rust-nix-templater = { git = "https://github.com/yusdacra/rust-nix-templater.git", branch = "master" }

[package.metadata.nix]
app = true
build = true
